[DOCFIX] Perf tuning doc (#7982)
* Add performance tuning doc

* Update Performance-Tuning.md

* Update Performance-Tuning.md

* Update Performance-Tuning.md